--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Halloween</h2>
                 <p>Straddling the line between fall and winter, plenty and paucity, life and death, Halloween is a time of celebration and superstition. It is thought to have originated with the ancient Celtic festival of Samhain, when people would light bonfires and wear costumes to ward off roaming ghosts.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
+                <p>The Bible does not mention Halloween. However, both the ancient origins of Halloween and its modern customs show it to be a celebration based on false beliefs about the dead and invisible spirits, or demons.</p>
                 <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
             </div>
         </div>
