--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Ghosts</a>
+                        <a class="page-scroll" href="#about">History</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#download">Monsters</a>
@@ -93,7 +93,7 @@
                 <h2>About Halloween</h2>
                 <p>Straddling the line between fall and winter, plenty and paucity, life and death, Halloween is a time of celebration and superstition. It is thought to have originated with the ancient Celtic festival of Samhain, when people would light bonfires and wear costumes to ward off roaming ghosts.</p>
                 <p>The Bible does not mention Halloween. However, both the ancient origins of Halloween and its modern customs show it to be a celebration based on false beliefs about the dead and invisible spirits, or demons.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <p>The word Halloween or Hallowe'en dates to about 1745 and is of Christian origin.The word "Hallowe'en" means "hallowed evening" or "holy evening". It comes from a Scottish term for All Hallows' Eve.</p>
             </div>
         </div>
     </section>
