--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h2>About Halloween</h2>
                 <p>Straddling the line between fall and winter, plenty and paucity, life and death, Halloween is a time of celebration and superstition. It is thought to have originated with the ancient Celtic festival of Samhain, when people would light bonfires and wear costumes to ward off roaming ghosts.</p>
                 <p>The Bible does not mention Halloween. However, both the ancient origins of Halloween and its modern customs show it to be a celebration based on false beliefs about the dead and invisible spirits, or demons.</p>
-                <p>The word Halloween or Hallowe'en dates to about 1745 and is of Christian origin.The word "Hallowe'en" means "hallowed evening" or "holy evening". It comes from a Scottish term for All Hallows' Eve.</p>
+                <p>The word Halloween or Hallowe'en dates to about 1745 and is of Christian origin. The word "Hallowe'en" means "hallowed evening" or "holy evening". It comes from a Scottish term for All Hallows' Eve.</p>
             </div>
         </div>
     </section>
@@ -103,9 +103,15 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>TOP HALLOWEEN CHARACTERS</h2>
+                    <ul>
+                        <li>Dracula</li>
+                        <li>Frankenstein</li>
+                        <li>White Lady</li>
+                        <li>Grim Reaper</li>
+                        <li>Valak</li>
+                    </ul>
+                  
                 </div>
             </div>
         </div>
