--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>TOP HALLOWEEN CHARACTERS</h2>
                     <ul>
-                        <li>Dracula</li>
-                        <li>Frankenstein</li>
-                        <li>White Lady</li>
-                        <li>Grim Reaper</li>
-                        <li>Valak</li>
+                        <li style=font-size: 20px;>Dracula</li>
+                        <li style=font-size: 20px;>Frankenstein</li>
+                        <li style=font-size: 20px;>White Lady</li>
+                        <li style=font-size: 20px;>Grim Reaper</li>
+                        <li style=font-size: 20px;>Valak</li>
                     </ul>
                   
                 </div>
