--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>TOP HALLOWEEN CHARACTERS</h2>
                     <ul>
-                        <li style="font-size: 20px; color: #00CCFF;">Dracula</li>
-                        <li style="font-size: 20px; color: #00CCFF;">Frankenstein</li>
-                        <li style="font-size: 20px; color: #00CCFF;">White Lady</li>
-                        <li style="font-size: 20px; color: #00CCFF;">Grim Reaper</li>
-                        <li style="font-size: 20px; color: #00CCFF;">Valak</li>
+                        <li style="font-size: 20px; color: #339933;">Dracula</li>
+                        <li style="font-size: 20px; color: #339933;">Frankenstein</li>
+                        <li style="font-size: 20px; color: #339933;">White Lady</li>
+                        <li style="font-size: 20px; color: #339933;">Grim Reaper</li>
+                        <li style="font-size: 20px; color: #339933;">Valak</li>
                     </ul>
                   
                 </div>
