--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Creepster" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Creepster" rel="stylesheet">
     <!-- Theme CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
 
@@ -105,11 +106,11 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>TOP HALLOWEEN CHARACTERS</h2>
                     <ul>
-                        <li style="font-size: 20px; color: #42DCA3;">Dracula</li>
-                        <li style="font-size: 20px; color: #42DCA3;">Frankenstein</li>
-                        <li style="font-size: 20px; color: #42DCA3;">White Lady</li>
-                        <li style="font-size: 20px; color: #42DCA3;">Grim Reaper</li>
-                        <li style="font-size: 20px; color: #42DCA3;">Valak</li>
+                        <li style="font-size: 20px; color: #42DCA3; font-family: 'Bungee', cursive;">Dracula</li>
+                        <li style="font-size: 20px; color: #42DCA3; font-family: 'Bungee', cursive;">Frankenstein</li>
+                        <li style="font-size: 20px; color: #42DCA3; font-family: 'Bungee', cursive;">White Lady</li>
+                        <li style="font-size: 20px; color: #42DCA3; font-family: 'Bungee', cursive;">Grim Reaper</li>
+                        <li style="font-size: 20px; color: #42DCA3; font-family: 'Bungee', cursive;">Valak</li>
                     </ul>
                   
                 </div>
