--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Spread The Terror</h2>
+                <p>Read the devil's contract. Share the fear. Spread the word</p>
+                <p><a href="http://www.wikiwand.com/en/Deal_with_the_Devil">Deal with the Devil</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
