--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2016</p>
+            <p>Copyright &copy; Happy Halloween 2016</p>
         </div>
     </footer>
 
