--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <h2>TOP HALLOWEEN CHARACTERS</h2>
                    
                         <p style="font-size: 20px; color: #42DCA3; font-family: 'Bungee', cursive;">Dracula</p>
-                        <img src= "img/dracula1.png"/>
+                        <img style="height:100px; width:100px"; src= "img/dracula1.png"/>
                         <p style="font-size: 20px; color: #42DCA3; font-family: 'Bungee', cursive;">Frankenstein</p>
                         <p style="font-size: 20px; color: #42DCA3; font-family: 'Bungee', cursive;">White Lady</p>
                         <p style="font-size: 20px; color: #42DCA3; font-family: 'Bungee', cursive;">Grim Reaper</p>
